Update src/test/java/com/limechain/trie/structure/decoded/node/DecodedNodeTest.java
Co-authored-by: David Petrov <david.petrov@limechain.tech>